force-app/main/default/objects/Community_Consent_Label__mdt/Community_Consent_Label__mdt.object-meta.xml
<CustomObject>
    <label>Community Consent Label</label>
    <pluralLabel>Community Consent Labels</pluralLabel>
</CustomObject>