force-app/main/default/objects/Community_Consent_Label__mdt/fields/Consent_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text_2__c</fullName>
    <label>Consent Text 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>