force-app/main/default/objects/Community_Consent_Label__mdt/fields/Consent_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text_3__c</fullName>
    <label>Consent Text 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>