force-app/main/default/objects/Community_Consent_Label__mdt/fields/Consent_Text_Version__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text_Version__c</fullName>
    <label>Consent Text Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>