force-app/main/default/objects/Community_Consent_Label__mdt/fields/Privacy_Policy_Label__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Label__c</fullName>
    <label>Privacy Policy Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>