force-app/main/default/objects/Community_Consent_Label__mdt/fields/Privacy_Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Version__c</fullName>
    <label>Privacy Policy Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>